--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" type="image/png" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#2e75cc" />
     <meta
@@ -11,7 +13,6 @@
     />
     <meta name="keywords" content="AI, 마인드맵, 채팅, Notion, Agent, React, TypeScript" />
     <meta name="author" content="Notion Agent Team" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
